Proyecto2/K8S/discipline-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discipline-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discipline-service
  template:
    metadata:
      labels:
        app: discipline-service
    spec:
      containers:
      - name: discipline-service
        image: your-docker-repo/discipline-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: discipline-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: discipline-service
