Proyecto2/K8S/serice.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: default
spec:
  ports:
    - port: 3300
      protocol: TCP
      targetPort: 3300
  selector:
    app: node-app
  type: NodePort
